--- a/PinusPengger.csproj
+++ b/PinusPengger.csproj
@@ -7,4 +7,27 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Aviva\**" />
+    <EmbeddedResource Remove="Aviva\**" />
+    <None Remove="Aviva\**" />
+    <Page Remove="Aviva\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="View\BookingVIP.xaml.cs" />
+    <Compile Remove="View\DetailPemesananBooking.xaml.cs" />
+    <Compile Remove="View\DetailPemesananCheckIn.xaml.cs" />
+    <Compile Remove="View\Kamar_reguler.xaml.cs" />
+    <Compile Remove="View\reservasi_reguler.xaml.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Remove="View\BookingVIP.xaml" />
+    <Page Remove="View\DetailPemesananBooking.xaml" />
+    <Page Remove="View\DetailPemesananCheckIn.xaml" />
+    <Page Remove="View\Kamar_reguler.xaml" />
+    <Page Remove="View\reservasi_reguler.xaml" />
+  </ItemGroup>
+
 </Project>
