--- a/PinusPengger.csproj
+++ b/PinusPengger.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Images\room1.png" />
+    <None Remove="Images\room2.png" />
+    <None Remove="Images\room3.png" />
+    <None Remove="Images\room4.png" />
+    <None Remove="Images\userProfile.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Costura.Fody" Version="5.7.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -19,6 +27,14 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\room1.png" />
+    <Resource Include="Images\room2.png" />
+    <Resource Include="Images\room3.png" />
+    <Resource Include="Images\room4.png" />
+    <Resource Include="Images\userProfile.png" />
   </ItemGroup>
 
 </Project>
