--- a/PinusPengger.csproj
+++ b/PinusPengger.csproj
@@ -37,4 +37,10 @@
     <Resource Include="Images\userProfile.png" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
