--- a/App.config
+++ b/App.config
@@ -2,7 +2,7 @@
 <configuration>
 	<connectionStrings>
 		<add name ="ConnString" 
-			 connectionString="Data Source=.\sqlexpress;Initial Catalog=db_hotel;Integrated Security=True" 
+			 connectionString="Data Source=MSI\SQLEXPRESS;Initial Catalog=db_hotel_terakhir;Integrated Security=True" 
 			 providerName="System.Data.SqlClient"/>
 		<!-- Add your own connection string here -->
 		
