--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         uses: NuGet/setup-nuget@v1.1.1
         
       - name: Create app.config file
-        run: Set-Content -Value "${{ secrets.APP_CONFIG }}" -Path App.config
+        run: Set-Content -Value '${{ secrets.APP_CONFIG }}' -Path App.config
      
       - name: Restore NuGet Packages
         run: nuget restore PinusPengger.sln
