--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,34 +8,34 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: windows-2022
+    runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3.3.0
+      - uses: actions/checkout@v4.1.4
+      
+      - uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 6.0.x
 
       - name: Setup MS Build
-        uses: microsoft/setup-msbuild@v1.1.3
-        
-      - name: Setup NuGet
-        uses: NuGet/setup-nuget@v1.1.1
-        
+        uses: microsoft/setup-msbuild@v2
+               
       - name: Create app.config file
         run: Set-Content -Value '${{ secrets.APP_CONFIG }}' -Path App.config
      
       - name: Restore NuGet Packages
-        run: nuget restore PinusPengger.sln
+        run: dotnet restore PinusPengger.sln
       
       - name: Build Release Library
         run:  msbuild PinusPengger.sln /p:Configuration=Release
         
       - name: Get current time
-        uses: josStorer/get-current-time@v2.0.2
         id: current-time
-        with:
-          format: YYYYMMDD-HHmmss
-          utcOffset: "+07:00"
-                
+        shell: pwsh
+        run: $formattedTime = Get-Date -Format "ddMMyyHHmmss" |
+              echo formattedTime=$formattedTime >> $env:GITHUB_OUTPUT
+              
       - name: Upload Artifact
-        uses: actions/upload-artifact@v3.1.2
+        uses: actions/upload-artifact@v4.3.2
         with:
           name: FinalProject_${{ steps.current-time.outputs.formattedTime }}
           path: ./bin/Release/net6.0-windows
