--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,9 @@ jobs:
       - name: Get current time
         id: current-time
         shell: pwsh
-        run: $formattedTime = Get-Date -Format "ddMMyyHHmmss" |
-              echo formattedTime=$formattedTime >> $env:GITHUB_OUTPUT
+        run: |
+          $formattedTime = Get-Date -Format "ddMMyyHHmmss" 
+          echo formattedTime=$formattedTime >> $env:GITHUB_OUTPUT
               
       - name: Upload Artifact
         uses: actions/upload-artifact@v4.3.2
